RESOLVED FIXED294472
[UnifiedPDF][iOS] Relative scroll position is not preserved in zoomed content, following a viewport update
https://bugs.webkit.org/show_bug.cgi?id=294472
Summary [UnifiedPDF][iOS] Relative scroll position is not preserved in zoomed content...
Aditya Keerthi
Reported 2025-06-13 15:11:16 PDT
Attachments
Aditya Keerthi
Comment 1 2025-06-13 17:35:51 PDT
EWS
Comment 2 2025-06-13 23:01:48 PDT
Committed 296222@main (c48b2af7092c): <https://commits.webkit.org/296222@main> Reviewed commits have been landed. Closing PR #46742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.